--- a/css/public.css
+++ b/css/public.css
@@ -25,3 +25,108 @@ img{
 .clearlr{
 	zoom: 1;
 }
+
+
+
+/*导航*/
+
+header {}
+
+header nav {
+	max-width: 1200px;
+	margin: auto;
+	padding: 20px 0;
+}
+
+header nav .logo {
+	float: left;
+	vertical-align: middle;
+}
+
+header nav ul {
+	float: right;
+	vertical-align: middle;
+}
+
+header nav ul li {
+	float: left;
+}
+
+header nav ul li a {
+	display: inline-block;
+	padding: 10px 25px;
+	margin-top: 10px;
+	font-size: 16px;
+	color: #565656;
+}
+
+header nav ul li a.active {
+	border-bottom: 2px solid #2B9CF0;
+	color: #2B9CF0;
+}
+
+header nav ul li:last-child a {
+	margin-left: 10px;
+	background: #2B9CF0;
+	color: white;
+	border-radius: 10px;
+	font-size: 20px;
+	padding: 10px 10px;
+	margin-top: 7px;
+}
+
+@media (max-width:992px) {
+	header nav {
+		padding: 0 0;
+		position: relative;
+	}
+	header nav .menu {
+		float: right;
+		border: 2px solid #666666;
+		border-radius: 6px;
+		padding-bottom: 10px;
+		margin-right: 10px;
+		margin-top: 5px;
+	}
+	header nav .menu span {
+		display: block;
+		border-bottom: 2px solid #666666;
+		width: 25px;
+		margin: 0 10px;
+		margin-top: 8px;
+	}
+	header nav ul {
+		position: absolute;
+		left: 0;
+		top: 100%;
+		right: 0;
+		float: none;
+		background: white;
+		vertical-align: middle;
+		z-index: 99999;
+		background: rgba(0, 0, 0, 0.3);
+	}
+	header nav ul li {
+		float: none;
+	}
+	header nav ul li a {
+		display: block;
+		padding: 5px 25px;
+		margin-top: 10px;
+		font-size: 16px;
+		color: white;
+	}
+	header nav ul li a.active {
+		border-bottom: 2px solid black;
+		color: black;
+	}
+	header nav ul li:last-child a {
+		margin-left: 0;
+		background: none;
+		color: white;
+		border-radius: 10px;
+		font-size: 16px;
+		padding: 5px 10px 5px 25px;
+		margin-top: 7px;
+	}
+}
