--- a/css/produtcenter.css
+++ b/css/produtcenter.css
@@ -1,5 +1,12 @@
 /*		<!--		微信拓客只需三分钟-->*/
-
+.banner{
+	background: #E3ECF2;
+}
+.banner img{
+	display: block;
+	width: 100%;
+	
+}
 .tookeen {
 	background: #E3ECF2;
 	padding-bottom: 100px;
@@ -26,12 +33,15 @@
 }
 
 .tookeen div>p:nth-child(3) {
-	margin: 50px 0 0 0;
+	margin: 80px 0 0 0;
+}
+.tookeen div>p:nth-child(3) img{
+	width: 70%;
 }
 
 @media (max-width:992px) {
 	.tookeen {
-		padding-bottom: 20px;
+		padding-bottom: 0;
 	}
 	.tookeen div>p:nth-child(1) a {
 		margin: 20px 0;
@@ -41,6 +51,9 @@
 	}
 	.tookeen div>p:nth-child(3) {
 		margin: 20px 0 0 0;
+	}
+	.tookeen div>p:nth-child(3) img{
+		width:100%;
 	}
 }
 
