--- a/css/public.css
+++ b/css/public.css
@@ -3,6 +3,9 @@ ul,li,ol{
 	padding: 0;
 	list-style: none;
 }
+body{
+	font-size: Helvetica, "Pingfang SC", "Microsoft YaHei", STHeiti, Verdana, Arial, Tahoma, sans-serif;
+}
 a{
 	text-decoration: none;
 }
@@ -66,7 +69,7 @@ header nav ul li a.active {
 }
 
 header nav ul li:last-child a {
-	margin-left: 10px;
+	margin-left: 80px;
 	background: #2B9CF0;
 	color: white;
 	border-radius: 10px;
@@ -104,7 +107,7 @@ header nav ul li:last-child a {
 		background: white;
 		vertical-align: middle;
 		z-index: 99999;
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0, 0.8);
 	}
 	header nav ul li {
 		float: none;
@@ -114,16 +117,16 @@ header nav ul li:last-child a {
 		padding: 5px 25px;
 		margin-top: 10px;
 		font-size: 16px;
-		color: white;
+		color: #BBBBBB;
 	}
 	header nav ul li a.active {
-		border-bottom: 2px solid black;
-		color: black;
+		border-bottom: 2px solid white;
+		color: white;
 	}
 	header nav ul li:last-child a {
 		margin-left: 0;
 		background: none;
-		color: white;
+		color: #BBBBBB;
 		border-radius: 10px;
 		font-size: 16px;
 		padding: 5px 10px 5px 25px;
