--- a/css/public.css
+++ b/css/public.css
@@ -1,23 +1,38 @@
-ul,li,ol{
+ul,
+li,
+ol {
 	margin: 0;
 	padding: 0;
 	list-style: none;
 }
-body{
+
+body {
 	font-size: Helvetica, "Pingfang SC", "Microsoft YaHei", STHeiti, Verdana, Arial, Tahoma, sans-serif;
 }
-a{
+
+a {
 	text-decoration: none;
 }
-p,h1,h2,h3,h4,h5,h6,body,html{
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+body,
+html {
 	margin: 0;
 	padding: 0;
 }
-img{
+
+img {
 	width: 100%;
 	height: auto;
 }
-.clearlr:after{
+
+.clearlr:after {
 	content: '';
 	display: block;
 	height: 0;
@@ -25,10 +40,10 @@ img{
 	clear: both;
 	visibility: hidden;
 }
-.clearlr{
+
+.clearlr {
 	zoom: 1;
 }
-
 
 
 /*导航*/
@@ -133,3 +148,98 @@ header nav ul li:last-child a {
 		margin-top: 7px;
 	}
 }
+
+
+/*底部*/
+
+@media (min-width:992px) {
+	footer {
+		background: #334259;
+		padding: 50px 0;
+	}
+	footer>div {
+		max-width: 1200px;
+		margin: auto;
+		color: white;
+	}
+	footer>div ul {}
+	footer>div ul li {
+		float: left;
+		width: 20%;
+		text-align: right;
+	}
+	footer>div ul li p {
+		padding: 30px 0;
+	}
+	footer>div ul li p span {
+		color: white;
+		display: block;
+	}
+	footer>div ul li:nth-child(1) {
+		background: url(../images/footer1.png) no-repeat 40% center;
+		background-size: 30% auto;
+	}
+	footer>div ul li:nth-child(2) {
+		background: url(../images/footer2.png) no-repeat 40% center;
+		background-size: 30% auto;
+	}
+	footer>div ul li:nth-child(3) {
+		background: url(../images/footer3.png) no-repeat 40% center;
+		background-size: 30% auto;
+	}
+	footer>div ul li:nth-child(4) {
+		background: url(../images/footer4.png) no-repeat 40% center;
+		background-size: 30% auto;
+	}
+	footer>div ul li:nth-child(5) {
+		background: url(../images/footer5.png) no-repeat 40% center;
+		background-size: 30% auto;
+	}
+	footer>div div:nth-child(2) {
+		width: 150px;
+		margin: 20px auto;
+	}
+	footer>div div:nth-child(3) {
+		text-align: center;
+	}
+}
+
+
+/*@media (max-width:992px) {
+	footer {
+		padding: 15px 10px;
+	}
+	footer>div ul li {
+		float: left;
+		width: 33%;
+		text-align: right;
+		font-size: 12px;
+	}
+	footer>div ul li p {
+		padding:10px 0;
+	}
+	footer>div ul li p span {
+		color: white;
+		display: block;
+	}
+	footer>div ul li:nth-child(1) {
+		background: url(../images/footer1.png) no-repeat 40% center;
+		background-size: 20% auto;
+	}
+	footer>div ul li:nth-child(2) {
+		background: url(../images/footer2.png) no-repeat 40% center;
+		background-size: 20% auto;
+	}
+	footer>div ul li:nth-child(3) {
+		background: url(../images/footer3.png) no-repeat 40% center;
+		background-size: 20% auto;
+	}
+	footer>div ul li:nth-child(4) {
+		background: url(../images/footer4.png) no-repeat 40% center;
+		background-size: 20% auto;
+	}
+	footer>div ul li:nth-child(5) {
+		background: url(../images/footer5.png) no-repeat 40% center;
+		background-size: 20% auto;
+	}
+}*/
