--- a/css/public.css
+++ b/css/public.css
@@ -371,7 +371,7 @@ slide .cli .tanchu span {
 	}
 	slide ul li {
 		float: left;
-		width: 33%;
+		width: 33.333333%;
 		height: 50px;
 		
 	}
@@ -383,6 +383,10 @@ slide .cli .tanchu span {
 		padding: 0;
 		position: initial;
 	}
+	slide .cli:nth-child(3){
+	margin-top: 0;
+	background: #FF9232;
+}
 	slide ul li:nth-child(1) img {
 		width: 25px;
 		height: 20px;
@@ -405,11 +409,11 @@ slide .cli .tanchu span {
 		margin-top: 5px;
 	}
 	slide ul li:nth-child(3) a{
-		font-size: 12px;
+		font-size: 14px;
 	}
 	slide ul li:nth-child(3) a img {
 		display: block;
-		width: 25px;
+		width: 20px;
 		height: 20px;
 		margin: auto;
 		margin-bottom: 5px;
