--- a/css/public.css
+++ b/css/public.css
@@ -96,6 +96,9 @@ header nav ul li:last-child a {
 }
 
 @media (max-width:992px) {
+	header nav ul {
+	margin-right:0;
+}
 	header nav .logo {
 		float: left;
 		vertical-align: middle;
