--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,12 @@
 .superiority ul li:nth-child(2) p:nth-child(2) {
 	color: #FF9000;
 }
-
+.superiority ul li:nth-child(1) img{
+	width: 80%;
+}
+.superiority ul li:nth-child(2) img{
+	width: 85%;
+}
 .superiority>p:last-child {
 	font-size: 16px;
 	margin: 80px 0;
@@ -102,6 +107,9 @@
 }
 
 @media (max-width:992px) {
+	.banner {
+		display: none;
+	}
 	.superiority>p:nth-child(1) a {
 		font-size: 16px;
 		margin: 20px 0 10px 0;
@@ -112,12 +120,19 @@
 	}
 	.superiority ul {
 		margin-top: 10px;
+		padding-left: 5px;
 	}
 	.superiority ul li p:nth-child(1) {
 		font-size: 50px;
 	}
 	.superiority ul li p:nth-child(1) img {
+		width: 40%;
+	}
+	.superiority ul li p:nth-child(2) img {
 		width: 50%;
+	}
+	.superiority ul li p:nth-child(3) img {
+		width: 70%;
 	}
 	.superiority ul li p:nth-child(2) {
 		margin-top: 15px;
@@ -198,7 +213,8 @@
 
 @media (max-width:992px) {
 	.colony {
-		padding-bottom: 10px;
+		padding-bottom: 0;
+		background: none;
 	}
 	.colony .content>p {
 		float: none;
@@ -213,10 +229,17 @@
 	.colony .content div {
 		float: none;
 		max-width: 450px;
-		margin: 0 15px;
+		margin-left: 0;
+		padding:20px 0;
 		text-align: center;
+		background: url(../images/bigback.png) no-repeat center center;
+		background-size: 100% 100%;
+	}
+	.colony .content div p{
+		margin: 0 10px;
 	}
 	.colony .content div p:nth-child(1) {
+		display: none;
 		text-align: center;
 	}
 	.colony .content div p:nth-child(1) a {
@@ -233,6 +256,7 @@
 		line-height: 24px;
 	}
 	.colony .content div p:last-child {
+		display: none;
 		padding-top: 10px;
 	}
 }
@@ -332,6 +356,7 @@
 }
 
 .resolve div ul li p:nth-child(3) {
+
 	font-size: 16px;
 	color: #4E4E4E;
 	line-height: 30px;
@@ -365,10 +390,11 @@
 	}
 	.resolve div ul {
 		margin-top: 20px;
+		
 	}
 	.resolve div ul li {
-		float: none;
-		width: 100%;
+		float: left;
+		width: 20%;
 		padding: 10px 0;
 		min-height: auto;
 	}
@@ -382,20 +408,27 @@
 		/*height: 100px;*/
 		font-size: 10px;
 		vertical-align: middle;
+		padding-top: 10px;
 	}
 	.resolve div ul li p:nth-child(1) img {
-		width: 25%;
+		width: 75%;
 		vertical-align: middle;
+		margin-top: -10px;
 	}
 	.resolve div ul li:nth-child(n+2) p:nth-child(1) img {
-		width: 20%;
+		width: 70%;
+		vertical-align: middle;
+	}
+	.resolve div ul li:nth-child(n+4) p:nth-child(1) img {
+		width: 60%;
 		vertical-align: middle;
 	}
 	.resolve div ul li p:nth-child(2) {
-		font-size: 18px;
+		font-size: 14px;
 		margin: 10px 0;
 	}
 	.resolve div ul li p:nth-child(3) {
+		display: none;
 		font-size: 12px;
 		line-height: 24px;
 	}
@@ -481,12 +514,19 @@
 		margin-bottom: 20px;
 	}
 	.briefness ul li p:nth-child(2) {
-		font-size: 20px;
+		font-size: 14px;
 		margin: 10px 0;
 	}
 	.briefness ul li p:nth-child(n+3) {
 		font-size: 12px;
 	}
+	.briefness ul li p:nth-child(1) img {
+	width: 15%;
+}
+
+.briefness ul li:nth-child(n+2) p:nth-child(1) img {
+	width: 12%;
+}
 }
 
 
